Fix in ovip12, solving https://github.com/OpenVASP/openvasp-contracts/issues/37

--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -12,7 +12,7 @@ Created: 2020-06-13
 
 This OVIP specifies the initial implementation of the [VASP Registry](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) interface. It provides a centrally managed lookup for linking VASP Identifiers to real world entities using decentral storage and accessibility.
 
-As specified in [OVIP-0011](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) the VASP Directory consists of a lookup smart contract, the VASP Registry, providing a reference to VASP Credentials and a data source for fetching the VASP Credentials. Here the lookup value consists of the Ethereum transaction id which inserted the VASP Credentials. The data source will be Ethereum event logs which are emitted when inserting new data.
+As specified in [OVIP-0011](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) the VASP Directory consists of a lookup smart contract, the VASP Registry, providing a reference to VASP Credentials and a data source for fetching the VASP Credentials. Here the lookup value consists of the Keccak256 hash of the VASP Credentials. The data source will be Ethereum event logs which are emitted when inserting new data.
 
 # Roles
 
@@ -46,8 +46,7 @@ function getCredentialsRef
 This method is inherited from the VASP Registry interface. It is a read-only query that can be executed by anyone. It is used to retrieve a reference to the Credentials and verifiable proof of data integrity.
 
 **Behavior:**
-Given a VASP Identifier (*vaspID*) it returns a tuple of two strings. The first string returned represents the reference for fetching the Credentials, here the transaction id with which the Credentials were inserted. The second parameter is the Keccak256 hash of the credentials and can be used to verify their content.
-
+Given a VASP Identifier (*vaspID*) it returns a tuple of two strings. The first string returned represents the reference for fetching the Credentials, here the tKeccak256 hash of the credentials. The second parameter is also the Keccak256 hash of the credentials and can be used to verify their content. The reason for redundancy is to comply with the [VASP Registry](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) interface.
 ## Insertion of Credentials
 
 **Signature:**
