--- a/README.mediawiki
+++ b/README.mediawiki
@@ -96,6 +96,13 @@ We thank the Bitcoin community for introducing this process to handle standard i
 | David Riegelnig
 | Standard
 | Accepted
+|-
+| [[ovip-0016.md|16]]
+|
+| Waku for Message Layer
+| Felix Laufenberg
+| Standard
+| Proposal
 |}
 
 <!-- IMPORTANT!  See the instructions at the top of this page, do NOT JUST add OVIPs here! -->
