Comment on OVIP-0016 implications

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -624,3 +624,6 @@ Read `connection` and `ovMessage` from the *Payload* of received *Envelope*.
 
 The specification proposed in this OVIP is not backwards compatible.
 
+# Whisper/Waku Comment
+
+This OVIP is only superseded by OVIP-0016 in terms of terminology. All consequences of this ovip hold true by replacing the word "Whisper" with the word "Waku".
