OVIP-0016 implications comment

--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -55,3 +55,8 @@ We desire to provide a framework for clearer communication and provide a basis f
 # 5. Backwards Compatibility
 
 There are no protocol changes described in this OVIP. It merely provides a framework of reasoning about already existing and future proposals.
+
+
+# Whisper/Waku Comment
+
+This OVIP is only superseded by OVIP-0016 in terms of terminology. All consequences of this ovip hold true by replacing the word "Whisper" with the word "Waku".
