--- a/ovip-0016.md
+++ b/ovip-0016.md
@@ -21,6 +21,6 @@ The Waku network client API is backwards compatible with the Whisper client API.
 Whisper has officially been deprecated and is not maintained any further: https://github.com/ethereum/go-ethereum/pull/21487.
 The Status team has forked the project and is maintaining and developing the network as Waku. We expect higher stability, ongoing development and a technically brigher future by switching messaging protocols.
 
-# 5. Backwards Compatibility
+# Backwards Compatibility
 
 As the Whisper and Waku networks are not connected per default, this is to be considered a backwards incompatible change. In terms of development, implementing this ovip is as easy as changing the Whisper url config entry to a Waku client url.
