--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -46,7 +46,7 @@ function getCredentialsRef
 This method is inherited from the VASP Registry interface. It is a read-only query that can be executed by anyone. It is used to retrieve a reference to the Credentials and verifiable proof of data integrity.
 
 **Behavior:**
-Given a VASP Identifier (*vaspID*) it returns a tuple of two strings. The first string returned represents the reference for fetching the Credentials, here the tKeccak256 hash of the credentials. The second parameter is also the Keccak256 hash of the credentials and can be used to verify their content. The reason for redundancy is to comply with the [VASP Registry](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) interface.
+Given a VASP Identifier (*vaspID*) it returns a tuple of two strings. The first string returned represents the reference for fetching the Credentials, here the Keccak256 hash of the credentials. The second parameter is also the Keccak256 hash of the credentials and can be used to verify their content. The reason for redundancy is to comply with the [VASP Registry](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) interface.
 ## Insertion of Credentials
 
 **Signature:**
