--- a/ovip-0016.md
+++ b/ovip-0016.md
@@ -3,7 +3,7 @@ OVIP: 16
 Title: Waku as Message Layer
 Author: Felix Laufenberg <felix.laufenberg@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Proposal
+Status: Accepted
 Replaces: OVIP-0009
 Type: Standard
 Created: 2020-09-18
