--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -61,7 +61,7 @@ The value assigned to `sig` is the cryptographic signature of the `content` obje
 
 ### 2.3. Message Encryption
 
-*Messages* must be asymmetrically encrypted with the public `messageKey` available from the *Receiver's* VASP Contract using secp256k1.
+*Messages* must be asymmetrically encrypted with the public `messageKey` available from the *Receiver's* VASP Contract using secp256k1. Asymmetric encryption uses the standard Elliptic Curve Integrated Encryption Scheme with SECP-256k1 public key. Symmetric encryption uses AES GCM algorithm with random 96-bit nonce and 16 byte authentication tag.
 
 The *Receiver* decrypts the *Message* with his corresponding private key.
 
