Add spec to payload encoding scheme

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -89,6 +89,7 @@ Upon receipt of an *Envelope*, if the node detects a known topic, it tries to de
 ### 4.1. OpenVASP Payload
 
 The table below shows the structure of the OpenVASP *Payload*. The last four elements are present depending on the value of the `instruction` element.
+The payload is encoded as a single big-endian, hex-encoded string with '0x' prefix.
 
 | Element       | Length         | Present | Description                                       | See   |
 | :------------ | :------------- | :------ | :------------------------------------------------ | :---- |
