--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -269,21 +269,19 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 4. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
 
-5. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the known `transportKey` using the X25519 key-exchange protocol.
+5. Generate Secp256k1 ECDH private key (`ecdhPrivateA`) and ECDH public key (`ecdhPublicA`).
 
-6. Derive `sharedKey` based on `transportKey` and  `ecdhPrivate`.
-
-8. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+6. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
    | Element       | Value                  |
    | :------------ | :--------------------- |
    | `instruction` | `001`                  |
    | `connection`  | `connectionIdentifier` |
    | `returnTopic` | `topicA`               |
-   | `ecdhPK`      | `ecdhPublic`           |
+   | `ecdhPK`      | `ecdhPublicA`           |
    | `ovMessage`   | `sessionMessage`       |
 
-9. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below.</br>
+7. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
@@ -298,7 +296,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | `connection`    | `connectionIdentifier` |
    | `inboundTopic`  | `topicA`               |
    | `outboundTopic` | (empty)                |
-   | `key`           | `sharedKey`            |
+   | `key`           | `Transport_sk` (same as permanent connection)  |
 
 9. Add item to the Outbound *Envelope* Queue:</br>
 
@@ -336,9 +334,11 @@ Send acknowledgement (see 5.6).
 
 2. Generate random `topicB` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
 
-3. Derive `sharedKey` based on the *Responder's* own `transportKey` and `ecdhPK` received in step 1 using the X25519 key-exchange protocol.
+3. Generate Secp256k1 ECDH private key (`ecdhPrivateB`) and ECDH public key (`ecdhPublicB`).
 
-4. Add item to the set of *Connections*:</br>
+4. Derive `sharedKey` based on `ecdhPrivateB` and `ecdhPublicA` received in step 1 using the X25519 key-exchange protocol.
+
+5. Add item to the set of *Connections*:</br>
 
    | Element         | Value                                                  |
    | :-------------- | :----------------------------------------------------- |
@@ -380,13 +380,14 @@ Send acknowledgement (see 5.6).
    | `instruction` | `010`                                                        |
    | `returnTopic` | `inboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
    | `ovMessage`   | `sessionMessage`                                             |
+   | `ecdhPK`      | `ecdhPublicB`                                                |
    
 2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
-   | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, asymmetrically encrypted (AES GCM algorithm as per Whisper standard) with counterparty `TransportKey` value. |
 
 3. Add item to the Outbound *Envelope* Queue:</br>
 
@@ -417,7 +418,9 @@ Send acknowledgement (see 5.6).
 
 ##### 6.2.2.3. Processing Steps
 
-1. Read `connection`, `returnTopic` and `ovMessage` from the *Payload* of received *Envelope*.
+1. Read `connection`, `returnTopic`, `ecdhPublicB` and `ovMessage` from the *Payload* of received *Envelope*.
+
+2. Derive `sharedKey` from `ecdhPublicB` and `ecdhPrivateA`.
 
 2. Look up respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
 
@@ -426,6 +429,7 @@ Send acknowledgement (see 5.6).
    | Element         | Value         |
    | :-------------- | :------------ |
    | `outboundTopic` | `returnTopic` |
+   | `key`           | `sharedKey`   |
 
 ##### 6.2.2.4. Notification to Session Layer
 
