Transport Layer PFS - handling ACKs

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -220,7 +220,7 @@ If required, the *Envelope* is acknowledged as per following steps.
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection` values. |
-   | `Data`  | *Message* inclusing *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values unless specified otherwise. |
    
 4. Send Envelope created in step 3.
 
@@ -326,7 +326,7 @@ Validate and decrypt *Envelope* (see 5.5).
 
 ##### 6.1.2.2. Acknowledge Envelope Receipt
 
-Send acknowledgement (see 5.6).
+Send acknowledgement (see 5.6), asymmetrically encrypted by counterparty public `transportKey`.
 
 ##### 6.1.2.3. Processing Steps
 
@@ -412,11 +412,7 @@ Send acknowledgement (see 5.6).
 
 Validate and decrypt *Envelope* (see 5.5).
 
-##### 6.2.2.2. Acknowledge Envelope Receipt
-
-Send acknowledgement (see 5.6).
-
-##### 6.2.2.3. Processing Steps
+##### 6.2.2.2. Processing Steps
 
 1. Read `connection`, `returnTopic`, `ecdhPublicB` and `ovMessage` from the *Payload* of received *Envelope*.
 
@@ -430,6 +426,10 @@ Send acknowledgement (see 5.6).
    | :-------------- | :------------ |
    | `outboundTopic` | `returnTopic` |
    | `key`           | `sharedKey`   |
+   
+##### 6.2.2.3. Acknowledge Envelope Receipt
+
+Send acknowledgement (see 5.6). Encrypted symmetrically with `sharedKey`.
 
 ##### 6.2.2.4. Notification to Session Layer
 
