Ephemeral listening key for session initiation

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -296,7 +296,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | `connection`    | `connectionIdentifier` |
    | `inboundTopic`  | `topicA`               |
    | `outboundTopic` | (empty)                |
-   | `key`           | `Transport_sk` (same as permanent connection)  |
+   | `key`           | `ecdhPrivateA`  |
 
 9. Add item to the Outbound *Envelope* Queue:</br>
 
