Simplify pk header field naming

--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -190,7 +190,7 @@ The *Message* must contain the following elements in its `header` object:
 | Header  |                    |           |              |                    |
 |         | Session identifier | `session` | Hex(128-bit) | Randomly set       |
 |         | Message type       | `type`    | String       | Fixed value: `100` |
-|         | Ephemeral ECDH Public Key  | `ecdhpkA`    | Hex(33-Bytes)       | Compressed Secp256k1 pubkey|
+|         | Ephemeral ECDH Public Key  | `ecdhpk`    | Hex(33-Bytes)       | Compressed Secp256k1 pubkey|
 
 #### 4.2. Session Reply
 
@@ -201,7 +201,7 @@ The *Message* must contain the following elements in its `header` and `body` obj
 | Header  |                    |           |              |                                     |
 |         | Session identifier | `session` | Hex(128-bit) | Value received in `Session Request` |
 |         | Message type       | `type`    | String       | Fixed value: `200`                  |
-|         | Ephemeral ECDH Public Key  | `ecdhpkB`    | Hex(33-Bytes)       | Compressed Secp256k1 pubkey|
+|         | Ephemeral ECDH Public Key  | `ecdhpk`    | Hex(33-Bytes)       | Compressed Secp256k1 pubkey|
 | Body    |                    |           |              |                                     |
 |         | Return code        | `return`  | String       | See 4.2.1                           |
 
