Fix bug in session reply encryption

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -387,7 +387,7 @@ Send acknowledgement (see 5.6), asymmetrically encrypted by counterparty public 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
-   | `Data`  | *Message* inclusing *Payload* created in step 1, asymmetrically encrypted (AES GCM algorithm as per Whisper standard) with counterparty `TransportKey` value. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, asymmetrically encrypted (ECIES algorithm as per Whisper standard) with `ecdhpkA` value. |
 
 3. Add item to the Outbound *Envelope* Queue:</br>
 
