Session Initiation ACK encryption updated

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -326,7 +326,7 @@ Validate and decrypt *Envelope* (see 5.5).
 
 ##### 6.1.2.2. Acknowledge Envelope Receipt
 
-Send acknowledgement (see 5.6), asymmetrically encrypted by counterparty public `transportKey`.
+Send acknowledgement (see 5.6), asymmetrically encrypted by `ecdhPK`, read from the *Payload* of received *Envelope*.
 
 ##### 6.1.2.3. Processing Steps
 
