Session Denial => asymmetric encryption

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -460,7 +460,7 @@ Send acknowledgement (see 5.6). Encrypted symmetrically with `sharedKey`.
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
-   | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, asymmetrically encrypted (ECIES algorithm as per Whisper standard) with ecdhpkA value. |
 
 3. Send Envelope created in step 2.
 
