--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -54,6 +54,7 @@ VASP receiving a *Message*.
 | Message identifier | `msgid`    | Hex(128-bit) | Randomly set                                   |
 | Session identifier | `session`  | Hex(128-bit) | See 4.1                                        |
 | Message type       | `type`     | String       | See 4.1 / 4.2 / 4.3 / 4.4                      |
+| ECDH Public Key    | `ecdhpk`   | Hex(33-Bytes)| See 4.1 / 4.2                                  |
 
 #### 2.2.2. Signature
 
