--- a/ovip-0014.md
+++ b/ovip-0014.md
@@ -38,11 +38,12 @@ Initiator (Originator VASP)
 | Version     |                                      | `version`     | String       | 1..1  | fixed value `1.0`   |
 | Originator  | see [ovip-0013](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#12-originator) (1.2) for elements | `originator`  |              | 1..1  |                     |
 | Beneficiary | see [ovip-0013](https://github.com/OpenVASP/ovips/blob/master/ovip-0013.md#13-beneficiary) (1.3) for elements | `beneficiary` |              | 1..1  |                     |
-| Transfer    |                                      | `transfer`    |              | 1..1  |                     |
-|             | Virtual asset type                   | `va`          | String       | 1..1  |                     |
-|             | Transfer type                        | `ttype`       | dt.TFR.ttype | 1..1  |                     |
-|             | Amount                               | `amount`      | Decimal      | 1..1  | 18 digits precision |
-| Comment     |                                      | `comment`     | String       | 0..1  |                     |
+| Transfer    |                                      | `transfer`    |                    | 1..1  |                     |
+|             | Virtual asset identifier             | `vaid`        | String             | 1..1  |                     |
+|             | Virtual asset identifier scheme      | `vaidscheme`  | dt.TFR.vaidscheme  | 1..1  |                     |
+|             | Transfer type                        | `ttype`       | dt.TFR.ttype       | 1..1  |                     |
+|             | Amount                               | `amount`      | Decimal            | 1..1  | 18 digits precision |
+| Comment     |                                      | `comment`     | String             | 0..1  |                     |
 
 **dt.TFR.ttype**
 
@@ -50,6 +51,11 @@ Initiator (Originator VASP)
 | :----- | :--------------------- |
 | `BCTX` | Blockchain transaction |
 
+**dt.TFR.vaidscheme**
+
+| Code   | Description            |
+| :----- | :--------------------- |
+| `ITIN` | International Token Identification Number |
 
 
 ### TFR.200 - Transfer Reply
