added SYMB identification scheme to TFR message type

--- a/ovip-0014.md
+++ b/ovip-0014.md
@@ -55,6 +55,7 @@ Initiator (Originator VASP)
 
 | Code   | Description            |
 | :----- | :--------------------- |
+| `SYMB` | Symbol [TODO: list all supported symbols] |
 | `ITIN` | International Token Identification Number |
 
 
