updated vaidscheme type 'SYMB' to 'TEXT' (a free text identifier)

--- a/ovip-0014.md
+++ b/ovip-0014.md
@@ -55,8 +55,8 @@ Initiator (Originator VASP)
 
 | Code   | Description            |
 | :----- | :--------------------- |
-| `SYMB` | Symbol [TODO: list all supported symbols] |
-| `ITIN` | International Token Identification Number |
+| `ITIN` | International Token Identification Number (ITIN) |
+| `TEXT` | Free text character string identifying a virtual asset |
 
 
 ### TFR.200 - Transfer Reply
