Temp fix for Session Abort
Temp fix for Session Abort proposed.

--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -143,9 +143,9 @@ The *Session* is ended by a *Message* of type `Termination` (see 4.3 for details
 
 #### 3.6. Aborting a Session
 
-Aborting a *Session* is done by sending a `Session Abort` *Message* (see 4.4 for details).
+Aborting a *Session* is done by sending a `Session Abort` *Message* (see 4.4 for details). Please note however, that this is only in the case of aborting for the reason other than transport layer ACK or Session timeout. In those two cases, no Session Abort message should be generated/sent. This exception to the rule will be addressed more throughfully in the upcoming releases.
 
-Sessions in state `open` can be aborted by either of the VASPs at any time to react to *Exceptions* or out of operational necessity. In addition, the *Initiator* can abort a *Session* in state `initiated`.
+Sessions in state `open` can be aborted by either of the VASPs at any time out of operational necessity. In addition, the *Initiator* can abort a *Session* in state `initiated`.
 
 There is no need aborting a *Session* in state `invited` as the *Responder* can send a decline `Session Reply` *Message* instead. It further makes no sense aborting a session being in one of the states `declined`, `closed` or `aborted` already.
 
