--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -143,7 +143,7 @@ The *Session* is ended by a *Message* of type `Termination` (see 4.3 for details
 
 #### 3.6. Aborting a Session
 
-Aborting a *Session* is done by sending a `Session Abort` *Message* (see 4.4 for details). Please note however, that this is only in the case of aborting for the reason other than transport layer ACK or Session timeout. In those two cases, no Session Abort message should be generated/sent. This exception to the rule will be addressed more throughfully in the upcoming releases.
+Aborting a *Session* is done by sending a `Session Abort` *Message* (see 4.4 for details). Please note however, that this is only in the case of aborting for the reason other than transport layer ACK or Session timeout. In those two cases, no Session Abort message should be generated/sent. This exception to the rule will be addressed more thoroughly in the upcoming releases.
 
 Sessions in state `open` can be aborted by either of the VASPs at any time out of operational necessity. In addition, the *Initiator* can abort a *Session* in state `initiated`.
 
