Handle Interrupted Connections more elegantly

--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -185,9 +185,9 @@ If this limit is reached for an item in the Outbound Envelope Queue, the respect
 
 In such a case, the *Node* must:
 
-1. Delete the respective *Connection* item from the *Connection* set.
+1. Iff the `isCLOSE` flag on the respective Outbound Envelope Queue item is `True`, then delete the respective *Connection* item from the *Connection* set.
 2. Delete the respective item from the Outbound Envelope Queue.
-3. Notify the session layer's *Exception Handling* (see OVIP-7, 3.1) about the interruption.
+3. Iff the `isCLOSE` flag on the respective Outbound Envelope Queue item is `False`, then notify the session layer's *Exception Handling* (see OVIP-7, 3.1) about the interruption.
 
 ### 5.5. Validating & Decrypting Inbound Envelopes
 
