--- a/ovip-0013.md
+++ b/ovip-0013.md
@@ -3,7 +3,8 @@ OVIP: 13
 Title: OpenVASP Core Data Types
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Accepted
+Status: Superseded
+Superseded-By: ovip-0018
 Type: Standard
 Created: 2020-06-14
 ```
