--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -3,7 +3,8 @@ OVIP: 7
 Title: Session Layer
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Accepted
+Status: Superseded
+Superseded-By: ovip-0018
 Type: Standard
 Created: 2020-05-28
 ```
