--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -3,7 +3,8 @@ OVIP: 9
 Title: 6 Layers of OpenVASP
 Author: Felix Laufenberg <felix.laufenberg@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
-Status: Accepted
+Status: Superseded
+Superseded-By: ovip-0018
 Type: Standard
 Created: 2020-05-25
 ```
